--- a/mafiest_backend/package.json
+++ b/mafiest_backend/package.json
@@ -8,9 +8,9 @@
     "dev": "nodemon index.js",
     "test": "cross-env NODE_ENV=test jest --verbose --runInBand",
     "lint": "eslint .",
-    "start:test": "NODE_ENV=test node index.js",
     "setup": "node utils/setupDb.js",
-    "build": "echo 'No build needed'"
+    "build": "npm install",
+    "postbuild": "npm run setup"
   },
   "keywords": [],
   "author": "",
